Fixed customer card list endpoint
