# src/openapi.yaml
@@ -566,7 +566,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CustomerCard'
+                $ref: '#/components/schemas/CustomerCardListResponse'
           description: List of customer cards
       summary: Get list of customer cards
       tags:
@@ -1028,10 +1028,10 @@ components:
         zipCode: zipCode
         patronymic: patronymic
         phoneNumber: phoneNumber
-        discountPercent: 6
+        discountPercent: 1
         city: city
         street: street
-        id: 0
+        id: 6
       title: CustomerCard
     EmployeeListResponse:
       allOf:
@@ -1195,6 +1195,28 @@ components:
         required:
         - items
         type: object
+      example:
+        totalCount: 0
+        items:
+        - firstName: firstName
+          lastName: lastName
+          zipCode: zipCode
+          patronymic: patronymic
+          phoneNumber: phoneNumber
+          discountPercent: 1
+          city: city
+          street: street
+          id: 6
+        - firstName: firstName
+          lastName: lastName
+          zipCode: zipCode
+          patronymic: patronymic
+          phoneNumber: phoneNumber
+          discountPercent: 1
+          city: city
+          street: street
+          id: 6
+      title: CustomerCardListResponse
     ListResponse:
       properties:
         totalCount:
